{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 754,
  "lineage": "ef7229b9-195d-3a90-2670-656d79ec7e78",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:108782082145:loadbalancer/app/my-alb/03cb78bc75133af4",
            "arn_suffix": "app/my-alb/03cb78bc75133af4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-920079984.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:108782082145:loadbalancer/app/my-alb/03cb78bc75133af4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04e5c57b1505cc2dc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04bae6af185e02da9"
              },
              {
                "subnet_id": "subnet-0ce5adfe0964bba5b"
              }
            ],
            "subnets": [
              "subnet-04bae6af185e02da9",
              "subnet-0ce5adfe0964bba5b"
            ],
            "vpc_id": "vpc-01a1d0ec728506f36",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.security-group.aws_security_group.allow_ssh",
            "module.subnet.aws_subnet.public1",
            "module.subnet.aws_subnet.public2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:108782082145:listener/app/my-alb/03cb78bc75133af4/fa14de60315e0ddd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:108782082145:targetgroup/my-target-group/e077855abed185d8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:108782082145:listener/app/my-alb/03cb78bc75133af4/fa14de60315e0ddd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:108782082145:loadbalancer/app/my-alb/03cb78bc75133af4",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.security-group.aws_security_group.allow_ssh",
            "module.subnet.aws_subnet.public1",
            "module.subnet.aws_subnet.public2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:108782082145:targetgroup/my-target-group/e077855abed185d8",
            "arn_suffix": "targetgroup/my-target-group/e077855abed185d8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:108782082145:targetgroup/my-target-group/e077855abed185d8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:108782082145:loadbalancer/app/my-alb/03cb78bc75133af4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01a1d0ec728506f36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:108782082145:targetgroup/my-target-group/e077855abed185d8-20241029050156596200000007",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:108782082145:targetgroup/my-target-group/e077855abed185d8",
            "target_id": "i-0b217d538c1f9c6a0"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.this",
            "module.ec2.aws_instance.web1",
            "module.ec2.aws_instance.web2",
            "module.key_pair.aws_key_pair.my_key",
            "module.key_pair.tls_private_key.example",
            "module.security-group.aws_security_group.allow_ssh",
            "module.subnet.aws_subnet.private1",
            "module.subnet.aws_subnet.private2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:108782082145:targetgroup/my-target-group/e077855abed185d8-20241029050156661800000008",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:108782082145:targetgroup/my-target-group/e077855abed185d8",
            "target_id": "i-0d210687f468c69f3"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.this",
            "module.ec2.aws_instance.web1",
            "module.ec2.aws_instance.web2",
            "module.key_pair.aws_key_pair.my_key",
            "module.key_pair.tls_private_key.example",
            "module.security-group.aws_security_group.allow_ssh",
            "module.subnet.aws_subnet.private1",
            "module.subnet.aws_subnet.private2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040c33c6a51fd5d96",
            "arn": "arn:aws:ec2:ap-northeast-2:108782082145:instance/i-0f74562444afd74f2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f74562444afd74f2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01f5168eec3135501",
            "private_dns": "ip-10-0-1-183.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.183",
            "public_ip": "13.124.241.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-027356ed491c132f4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04bae6af185e02da9",
            "tags": {
              "Name": "bastion_host"
            },
            "tags_all": {
              "Name": "bastion_host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e5c57b1505cc2dc"
            ]
          },
          "dependencies": [
            "module.key_pair.aws_key_pair.my_key",
            "module.key_pair.tls_private_key.example",
            "module.security-group.aws_security_group.allow_ssh",
            "module.subnet.aws_subnet.public1",
            "module.subnet.aws_subnet.public2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2d3e23e757b5d84",
            "arn": "arn:aws:ec2:ap-northeast-2:108782082145:instance/i-09b04d27fc4873441",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b04d27fc4873441",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-017aa96edb0219dd9",
            "private_dns": "ip-10-0-2-63.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.63",
            "public_ip": "13.125.188.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0ecdb5089bc60afbe",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0ce5adfe0964bba5b",
            "tags": {
              "Name": "nat_instance"
            },
            "tags_all": {
              "Name": "nat_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e5c57b1505cc2dc"
            ]
          },
          "dependencies": [
            "module.key_pair.aws_key_pair.my_key",
            "module.key_pair.tls_private_key.example",
            "module.security-group.aws_security_group.allow_ssh",
            "module.subnet.aws_subnet.public1",
            "module.subnet.aws_subnet.public2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040c33c6a51fd5d96",
            "arn": "arn:aws:ec2:ap-northeast-2:108782082145:instance/i-0b217d538c1f9c6a0",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b217d538c1f9c6a0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08141e66fbb55971d",
            "private_dns": "ip-10-0-3-149.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00a65f9387abac075",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d7637bada00c340d",
            "tags": {
              "Name": "web1"
            },
            "tags_all": {
              "Name": "web1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e5c57b1505cc2dc"
            ]
          },
          "dependencies": [
            "module.key_pair.aws_key_pair.my_key",
            "module.key_pair.tls_private_key.example",
            "module.security-group.aws_security_group.allow_ssh",
            "module.subnet.aws_subnet.private1",
            "module.subnet.aws_subnet.private2",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040c33c6a51fd5d96",
            "arn": "arn:aws:ec2:ap-northeast-2:108782082145:instance/i-0d210687f468c69f3",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d210687f468c69f3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00576840493751570",
            "private_dns": "ip-10-0-4-188.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03f03fb4dcc1bafcf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04504c7a22f4c1dd0",
            "tags": {
              "Name": "web2"
            },
            "tags_all": {
              "Name": "web2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e5c57b1505cc2dc"
            ]
          },
          "dependencies": [
            "module.key_pair.aws_key_pair.my_key",
            "module.key_pair.tls_private_key.example",
            "module.security-group.aws_security_group.allow_ssh",
            "module.subnet.aws_subnet.private1",
            "module.subnet.aws_subnet.private2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:108782082145:security-group/sg-04e5c57b1505cc2dc",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e5c57b1505cc2dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "108782082145",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a1d0ec728506f36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06010a06b719d93f5",
            "route_table_id": "rtb-0274e47c6f854a03f",
            "subnet_id": "subnet-0d7637bada00c340d"
          },
          "dependencies": [
            "module.ec2.aws_instance.nat_instance",
            "module.key_pair.aws_key_pair.my_key",
            "module.key_pair.tls_private_key.example",
            "module.security-group.aws_security_group.allow_ssh",
            "module.subnet.aws_subnet.private1",
            "module.subnet.aws_subnet.public1",
            "module.subnet.aws_subnet.public2",
            "module.vpc.aws_route_table.main1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee80e6b9ebcf0f8c",
            "route_table_id": "rtb-0274e47c6f854a03f",
            "subnet_id": "subnet-04504c7a22f4c1dd0"
          },
          "dependencies": [
            "module.ec2.aws_instance.nat_instance",
            "module.key_pair.aws_key_pair.my_key",
            "module.key_pair.tls_private_key.example",
            "module.security-group.aws_security_group.allow_ssh",
            "module.subnet.aws_subnet.private2",
            "module.subnet.aws_subnet.public1",
            "module.subnet.aws_subnet.public2",
            "module.vpc.aws_route_table.main1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013187beb4fb2b253",
            "route_table_id": "rtb-0f76de9f6e4cc68e8",
            "subnet_id": "subnet-04bae6af185e02da9"
          },
          "dependencies": [
            "module.subnet.aws_subnet.public1",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cad99dbfdaa7236",
            "route_table_id": "rtb-0f76de9f6e4cc68e8",
            "subnet_id": "subnet-0ce5adfe0964bba5b"
          },
          "dependencies": [
            "module.subnet.aws_subnet.public2",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:108782082145:subnet/subnet-0d7637bada00c340d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7637bada00c340d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "108782082145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-01a1d0ec728506f36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:108782082145:subnet/subnet-04504c7a22f4c1dd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04504c7a22f4c1dd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "108782082145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-01a1d0ec728506f36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:108782082145:subnet/subnet-04bae6af185e02da9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bae6af185e02da9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "108782082145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-01a1d0ec728506f36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:108782082145:subnet/subnet-0ce5adfe0964bba5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce5adfe0964bba5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "108782082145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-01a1d0ec728506f36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:108782082145:internet-gateway/igw-0ed1b7ab787aff3ee",
            "id": "igw-0ed1b7ab787aff3ee",
            "owner_id": "108782082145",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-01a1d0ec728506f36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:108782082145:route-table/rtb-0f76de9f6e4cc68e8",
            "id": "rtb-0f76de9f6e4cc68e8",
            "owner_id": "108782082145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ed1b7ab787aff3ee",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-route-table"
            },
            "tags_all": {
              "Name": "my-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a1d0ec728506f36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:108782082145:route-table/rtb-0274e47c6f854a03f",
            "id": "rtb-0274e47c6f854a03f",
            "owner_id": "108782082145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-017aa96edb0219dd9",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-route-table-nat"
            },
            "tags_all": {
              "Name": "my-route-table-nat"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a1d0ec728506f36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_instance.nat_instance",
            "module.key_pair.aws_key_pair.my_key",
            "module.key_pair.tls_private_key.example",
            "module.security-group.aws_security_group.allow_ssh",
            "module.subnet.aws_subnet.public1",
            "module.subnet.aws_subnet.public2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:108782082145:vpc/vpc-01a1d0ec728506f36",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d1221c26c65a7cb1",
            "default_route_table_id": "rtb-01be91382ed859b64",
            "default_security_group_id": "sg-005b2e6021f53613f",
            "dhcp_options_id": "dopt-0570a05bfbee7451a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01a1d0ec728506f36",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01be91382ed859b64",
            "owner_id": "108782082145",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}